--- a/client/code/index.html
+++ b/client/code/index.html
@@ -1,19 +1,24 @@
 <!doctype html>
-<html lang="ru">
+<html lang='ru'>
 <head>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="#" /> <!-- TODO: ссылка на ico -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/elements/NavBar.css">
+    <meta charset='UTF-8'>
+    <link rel='shortcut icon' href='#' /> <!-- TODO: ссылка на ico -->
+    <link rel='stylesheet' href='css/base.css'>
+    <link rel='stylesheet' href='css/elements/NavBar.css'>
     <title>HOME</title>
 </head>
 <body>
     <header>
         <nav>
-            <div class="home"></div>
-            <div class="item"><a href ="/contacts"><div>contacts</div></a></div>
-            <div class="item"><a href ="/branches"><div>branches</div></a></div>
-            <div class="item"><a href ="/persons"><div>persons</div></a></div>
+            <div class='nav_left'>
+                <a class='home'></a>
+                <div class='place_text'>Главная</div>
+            </div>
+            <div class='nav_right'>
+                <a class='nav_item' href ='/contacts'><div>Контакты</div></a>
+                <a class='nav_item' href ='/persons'><div>Прототип</div></a>
+                <a class='nav_item'><div>none</div></a>
+            </div>
         </nav>
     </header>
     <main>
