TEMPORARY CODE UPDATE Дописана логика подсветки полей ввода даты. Теперь поля реагируют на неправильный вид введённой даты

--- a/client/code/pages/contacts.html
+++ b/client/code/pages/contacts.html
@@ -34,7 +34,7 @@
                     <div class='contacts_head_row'>
                         <div class='contacts_h_title col_name'>Name</div>
                         <div class='contacts_h_title col_email'>Email</div>
-                        <div class='contacts_кh_title col_phone'>Phone</div>
+                        <div class='contacts_h_title col_phone'>Phone</div>
                         <div class='contacts_h_title col_birthday'>Birthday</div>
                     </div><hr>
                     <div class='contacts_body'>
@@ -42,7 +42,7 @@
                             <div class='contacts_b_field col_name'>Спирьянова Зинаида Платоновна</div>
                             <div class='contacts_b_field col_email'>zinaida.spiryanova@outlook.com</div>
                             <div class='contacts_b_field col_phone'>+7 (923) 706-58-80</div>
-                            <div class='contacts_b_field col_birthday'>11 октября 2222 г.</div>
+                            <div class='contacts_b_field col_birthday'>11.11.2222</div>
                         </div><hr class='line'>
                         <div class='contacts_b_row'>
                             <div class='contacts_b_field col_name'>Щепкин Игнат Лаврентиич</div>
@@ -344,7 +344,7 @@
                     <div class='form_inputs'>
                         <div class='input_row'>
                             <i class='material-icons'>person</i>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <input
                                     autocomplete='off'
                                     class='other'
@@ -360,7 +360,7 @@
                         </div>
                         <div class='input_row'>
                             <i></i>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <input
                                     autocomplete='off'
                                     class='other'
@@ -376,7 +376,7 @@
                         </div><hr class='line'>
                         <div class='input_row'>
                             <i class='material-icons'>mail</i>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <input
                                     autocomplete='off'
                                     class='other'
@@ -390,7 +390,7 @@
                         </div><hr class='line'>
                         <div class='input_row'>
                             <i class='material-icons'>call</i>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <input
                                     autocomplete='off'
                                     class='other'
@@ -404,7 +404,7 @@
                         </div><hr class='line'>
                         <div class='input_row'>
                             <i class='material-icons'>star_rate</i>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <input
                                     autocomplete='off'
                                     form='new_contact'
@@ -415,7 +415,7 @@
                                     type='number'>
                                 <label>День</label>
                             </input_custom>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <select
                                     form='new_contact'
                                     name='month'
@@ -436,7 +436,7 @@
                                 </select>
                                 <label>Месяц</label>
                             </input_custom>
-                            <input_custom>
+                            <input_custom class='valid_input'>
                                 <input
                                     autocomplete='off'
                                     form='new_contact'
