ПОЛНОЕ ОБНОВЛЕНИЕ - Временные страницы удалены за ненадобностью, ссылки на них были убраны. - Файлы скриптов, которые сопровождали те страницы, тоже убраны. - Файл с контактами, который временно находился в хранилище на стороне контейнера-клиента был убран. - Конфиги nginx были немного доработаны. - В файлах со стилями проведены косметические доработки, а также был добавлен файл для гугл иконок. - На клиентской части в некоторых скриптах упрощён код, добавлено больше пояснений. - Также написаны скрипты, разгружающие своим функционалом предыдущие скрипты. - Из них в том числе те, которые теперь позволяют работать с массивами данных как с полноценными объектами. - Улучшена обработка ошибок в файле с запросами к серверу. - Также добавлена работа с токенами, выдаваемыми сервером клиенту и обработка ошибки, происходящей в ходе шифрования токена. - Дополнен файл генерации формы, которая теперь может сериализовать и id контакта. - Немного изменён файл docker-compose.yaml, также появилась возможность использовать контейнерный artisan. - На стороне сервера убраны предустановленные файлы с миграциями БД, а также написана новая для решения поставленных задач. - Пример заполнения полей в .env.example был уточнён. - Также добавлен контроллер для работы с моделью контакта на стороне сервера. В Абстрактном контроллере добавлены функции для работы с запросами клиента. - Расширено разнообразие роутов для полноценного использования REST API во взаимодействиях между клиентом и сервером.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html lang='ru'>
 <head>
     <meta charset='UTF-8'>
-    <link rel='shortcut icon' href='#' /> <!-- TODO: ссылка на ico -->
+    <link rel='shortcut icon' href='images/icon.svg'/>
     <link rel='stylesheet' href='css/base.css'>
     <link rel='stylesheet' href='css/elements/BasisOfPage.css'>
     <link rel='stylesheet' href='css/elements/NavBar.css'>
@@ -17,8 +17,8 @@
             </div>
             <div class='nav_right'>
                 <a class='nav_item' href ='/contacts'><div>Контакты</div></a>
-                <a class='nav_item' href ='/persons'><div>Прототип</div></a>
-                <a class='nav_item'><div>none</div></a>
+                <a class='nav_item'><div>Страница 2</div></a>
+                <a class='nav_item'><div>Страница 3</div></a>
             </div>
         </nav>
     </header>
