--- a/client/src/pages/contacts.html
+++ b/client/src/pages/contacts.html
@@ -2,9 +2,9 @@
 <html lang='ru'>
 <head>
     <meta charset='UTF-8'>
-    <link rel='shortcut icon' href='#' /> <!-- TODO: ссылка на ico -->
-    <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons'>
+    <link rel='shortcut icon' href='../images/icon.svg'/>
     <link rel='stylesheet' href='../css/forContacts.css'>
+    <link rel='stylesheet' href='../css/elements/GoogleFonts_MaterialSymbolsOutlined.css'>
     <link rel='stylesheet' href='../css/elements/BasisOfPage.css'>
     <link rel='stylesheet' href='../css/elements/NavBar.css'>
     <link rel='stylesheet' href='../css/elements/Windows.css'>
@@ -22,8 +22,8 @@
             </div>
             <div class='nav_right'>
                 <a class='nav_item' href ='/'><div>Главная</div></a>
-                <a class='nav_item' href ='/persons'><div>Прототип</div></a>
-                <a class='nav_item'><div>none</div></a>
+                <a class='nav_item'><div>Страница 2</div></a>
+                <a class='nav_item third'><div>Страница 3</div></a>
             </div>
         </nav>
         </header>
